@@ -100,10 +100,10 @@ class BookReviewServiceTest {
         Set<MetadataPublicReviewsSettings.ReviewProviderConfig> configs = new HashSet<>();
         for (MetadataProvider provider : providers) {
             MetadataPublicReviewsSettings.ReviewProviderConfig config =
-                MetadataPublicReviewsSettings.ReviewProviderConfig.builder()
-                    .provider(provider)
-                    .enabled(true)
-                    .build();
+                    MetadataPublicReviewsSettings.ReviewProviderConfig.builder()
+                            .provider(provider)
+                            .enabled(true)
+                            .maxReviews(10).build();
             configs.add(config);
         }
 
@@ -193,7 +193,7 @@ class BookReviewServiceTest {
         when(bookRepository.findById(bookId)).thenReturn(Optional.of(bookEntity));
         when(mapper.toDto(savedEntity)).thenReturn(freshReview);
 
-        Map<MetadataProvider, BookMetadata> metadataMap = new HashMap<>();
+        Map<MetadataProvider, BookMetadata> metadataMap = new EnumMap<>(MetadataProvider.class);
         metadataMap.put(MetadataProvider.Amazon, BookMetadata.builder()
             .bookReviews(Collections.singletonList(freshReview))
             .build());
@@ -204,7 +204,7 @@ class BookReviewServiceTest {
         List<BookReview> result = service.getByBookId(bookId);
 
         assertEquals(1, result.size());
-        assertEquals(freshReview, result.get(0));
+        assertEquals(freshReview, result.getFirst());
         verify(bookReviewUpdateService).addReviewsToBook(
             Collections.singletonList(freshReview), bookEntity.getMetadata());
         verify(bookRepository).save(bookEntity);
@@ -229,7 +229,7 @@ class BookReviewServiceTest {
         when(bookRepository.findById(bookId)).thenReturn(Optional.of(bookEntity));
         when(mapper.toDto(savedEntity)).thenReturn(freshReview);
 
-        Map<MetadataProvider, BookMetadata> metadataMap = new HashMap<>();
+        Map<MetadataProvider, BookMetadata> metadataMap = new EnumMap<>(MetadataProvider.class);
         metadataMap.put(MetadataProvider.GoodReads, BookMetadata.builder()
             .bookReviews(Collections.singletonList(freshReview))
             .build());
@@ -305,7 +305,7 @@ class BookReviewServiceTest {
         BookReview amazonReview = createBookReview(MetadataProvider.Amazon);
         BookReview goodreadsReview = createBookReview(MetadataProvider.GoodReads);
 
-        Map<MetadataProvider, BookMetadata> metadataMap = new HashMap<>();
+        Map<MetadataProvider, BookMetadata> metadataMap = new EnumMap<>(MetadataProvider.class);
         metadataMap.put(MetadataProvider.Amazon, BookMetadata.builder()
             .bookReviews(Collections.singletonList(amazonReview))
             .build());
@@ -330,7 +330,7 @@ class BookReviewServiceTest {
         AppSettings appSettings = new AppSettings();
         appSettings.setMetadataPublicReviewsSettings(createReviewSettings(true, MetadataProvider.Amazon));
 
-        Map<MetadataProvider, BookMetadata> metadataMap = new HashMap<>();
+        Map<MetadataProvider, BookMetadata> metadataMap = new EnumMap<>(MetadataProvider.class);
         metadataMap.put(MetadataProvider.Amazon, BookMetadata.builder()
             .bookReviews(null)
             .build());
